# homegear-nodes-core

./: .gitignore  .project  CMakeLists.txt  Makefile.am  MyNode.cpp  MyNode.h  configure.ac  getVersion.sh  makeRelease.sh  test.txt
average/: Makefile.am  MyNode.cpp  MyNode.h  average.hni  package.json
average/locales/de-DE/: average  average.help.html  average.json
average/locales/en-US/: average  average.help.html  average.json
average/test/: test_average.py  test_currentValue.py  test_currentValue_Double.py  test_currentValue_Integer.py  test_time.py  test_time_Double.py  test_time_Integer.py
basic-logic/: Makefile.am  package.json
basic-logic/and/: MyNode.cpp  MyNode.h  and.hni
basic-logic/change/: Change.cpp  Change.h  Factory.cpp  Factory.h  MyNode.cpp  MyNode.h  change.hni
basic-logic/equal/: MyNode.cpp  MyNode.h  equal.hni
basic-logic/fallingedge/: MyNode.cpp  MyNode.h  fallingedge.hni
basic-logic/greater-or-equal/: MyNode.cpp  MyNode.h  greater-or-equal.hni
basic-logic/greater-than/: MyNode.cpp  MyNode.h  greater-than.hni
basic-logic/less-or-equal/: Factory.h  MyNode.cpp  MyNode.h  less-or-equal.hni
basic-logic/less-than/: MyNode.cpp  MyNode.h  less-than.hni
basic-logic/locales/de-DE/: and.help.html  basic-logic.json
basic-logic/locales/en-US/: and.help.html  basic-logic.json
basic-logic/not/: MyNode.cpp  MyNode.h  not.hni
basic-logic/or/: MyNode.cpp  MyNode.h  or.hni
basic-logic/risingedge/: MyNode.cpp  MyNode.h  risingedge.hni
basic-logic/srflipflop/: MyNode.cpp  MyNode.h  srflipflop.hni
basic-logic/switch/: Factory.cpp  Factory.h  MyNode.cpp  MyNode.h  Switch.cpp  Switch.h  switch.hni
basic-logic/variable-switch/: Factory.cpp  MyNode.cpp  MyNode.h  variable-switch.hni
catch/: Catch.cpp  Catch.h  Factory.cpp  Factory.h  Makefile.am  catch.hni  package.json
catch/locales/en-US/: catch.help.html  catch.json
comment/: Makefile.am  comment.hni  package.json
comment/locales/de-DE/: comment  comment.json
comment/locales/en-US/: comment  comment.json
debug/: Makefile.am  MyNode.cpp  MyNode.h  debug.hni  package.json
debug/locales/de-DE/: debug  debug.json
debug/locales/en-US/: debug  debug.json
exec/: Exec.cpp  Exec.h  Factory.cpp  Factory.h  Makefile.am  exec.hni  package.json
exec/locales/de-DE/: exec  exec.json
exec/locales/en-US/: exec  exec.json
function/: Makefile.am  function.hni  function.php  package.json
function/locales/de-DE/: function  function.json
function/locales/en-US/: function  function.json
gpio/: Makefile.am  package.json
gpio/gpio-in/: gpio-in.hni  gpio-in.s.php
gpio/gpio-out/: gpio-in.s.php  gpio-out.hni  gpio-out.s.php
gpio/locales/de-DE/: gpio.json
gpio/locales/en-US/: gpio.json
greater-than/: Makefile.am  MyNode.cpp  MyNode.h  debug.hni  greater-than.hni
greater-than/locales/en-US/: greater-than
homegear-event/: Makefile.am  MyNode.cpp  MyNode.h  homegear-event.hni  package.json
homegear-event/locales/de-DE/: homegear-event  homegear-event.json
homegear-event/locales/en-US/: homegear-event  homegear-event.json
http/: Makefile.am  package.json
http/http-in/: MyNode.cpp  MyNode.h  http-in.hni
http/http-request/: MyNode.cpp  MyNode.h  http-request.hni
http/http-response/: Factory.cpp  MyNode.cpp  MyNode.h  http-response.hni
http/http-server/: MyNode.cpp  MyNode.h  Server.cpp  Server.h  http-server.hni
http/locales/de-DE/: http.json
http/locales/en-US/: http.json
influxdb/: Makefile.am  MyNode.cpp  MyNode.h  influxdb.hni  package.json
influxdb/locales/de-DE/: influxdb  influxdb.json
influxdb/locales/en-US/: influxdb  influxdb.json
javascript/: Makefile.am  javascript.html  javascript.js  package.json
javascript/locales/de-DE/: javascript.help.html  javascript.json
javascript/locales/en-US/: javascript.help.html  javascript.json
light/: Factory.cpp  Factory.h  Light.cpp  Light.h  Makefile.am  MyNode.cpp  MyNode.h  light.hni  package.json
light/locales/de-DE/: light  light.json
light/locales/en-US/: light  light.json
link/: Makefile.am  link.hni  package.json
link/link-in/: Factory.cpp  Factory.h  LinkIn.cpp  LinkIn.h  MyNode.cpp  MyNode.h  link-in.hni
link/link-out/: Factory.cpp  Factory.h  LinkOut.cpp  LinkOut.h  MyNode.cpp  MyNode.h  link-out.hni
link/locales/de-DE/: link.json
modbus/: Makefile.am  package.json
modbus/modbus-host/: Factory.cpp  Modbus.cpp  Modbus.h  ModbusHost.cpp  ModbusHost.h  Mqtt.cpp  Mqtt.h  MyNode.cpp  MyNode.h  modbus-host.hni
modbus/modbus-in/: ModbusIn.cpp  ModbusIn.h  MyNode.cpp  MyNode.h  modbus-in.hni
modbus/modbus-out/: Factory.cpp  ModbusOut.cpp  ModbusOut.h  MyNode.cpp  MyNode.h  modbus-out.hni
modbus/modbus-trigger/: Factory.cpp  ModbusTrigger.cpp  ModbusTrigger.h  modbus-trigger.hni
mqtt/: Makefile.am  package.json
mqtt-broker/: Makefile.am  Mqtt.cpp  Mqtt.h  MyNode.cpp  mqtt-broker.hni
mqtt-in/: Makefile.am  mqtt-in.hni
mqtt/mqtt-broker/: Mqtt.cpp  Mqtt.h  MyNode.cpp  MyNode.h  mqtt-broker.cred.json  mqtt-broker.hni
mqtt/mqtt-in/: MyNode.cpp  MyNode.h  mqtt-in.hni
mqtt/mqtt-out/: Factory.h  MyNode.cpp  MyNode.h  mqtt-out.hni
notification/: Makefile.am  package.json  xmpp-server.hni  xmpp-server.s.php  xmpp.hni  xmpp.php
notification/vendor-libs/: autoload.php
parsers/: Makefile.am  package.json
parsers/binary/: Factory.cpp  MyNode.cpp  MyNode.h  binary.hni
parsers/json/: MyNode.cpp  MyNode.h  json.hni
parsers/strip/: MyNode.cpp  MyNode.h  strip.hni
parsers/xml/: Factory.cpp  Factory.h  MyNode.cpp  MyNode.h  Xml.cpp  Xml.h  xml.hni
passthrough/: Factory.cpp  Makefile.am  MyNode.cpp  MyNode.h  package.json  passthrough.hni
ping/: Makefile.am  MyNode.cpp  MyNode.h  package.json  ping.hni
presence-light/: Factory.cpp  Factory.h  Makefile.am  PresenceLight.cpp  PresenceLight.h  package.json  presence-light.hni
press-pattern/: Makefile.am  MyNode.cpp  MyNode.h  package.json  press-pattern.hni
pulsecounter/: Makefile.am  MyNode.cpp  MyNode.h  package.json  pulsecounter.hni
python-wrapper/: Factory.cpp  Factory.h  Makefile.am  Python.cpp  Python.h
(+464 files in other folders)
