AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I m4 -I cfg
SUBDIRS = average basic-logic comment debug exec function gpio homegear-event http influxdb light link modbus mqtt notification parsers passthrough ping pulsecounter presence-light press-pattern python serial synchronous storage tcp template timers tls-config tls-server-config variable
