AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I m4 -I cfg
SUBDIRS = average basic-logic catch comment debug exec function gpio homegear-event http influxdb javascript light link modbus mqtt notification parsers passthrough ping pulsecounter presence-light press-pattern python python-wrapper rbe serial synchronous status storage tcp template timers tls-config tls-server-config udp unit-test-helper variable
