AUTOMAKE_OPTIONS = subdir-objects

libdir = $(localstatedir)/lib/homegear/flows/nodes/comment
commentdir = $(libdir)
comment_DATA = comment.hni
locale_en_usdir = $(libdir)/locales/en-US
locale_en_us_DATA = locales/en-US/comment
locale_de_dedir = $(libdir)/locales/de-DE
locale_de_de_DATA = locales/de-DE/comment

