AUTOMAKE_OPTIONS = subdir-objects

libdir = $(localstatedir)/lib/homegear/node-blue/nodes/function
functiondir = $(libdir)
function_DATA = package.json function.hni function.php

locale_endir = $(libdir)/locales/en
locale_en_DATA = locales/en-US/function.json

locale_en_usdir = $(libdir)/locales/en-US
locale_en_us_DATA = locales/en-US/function.json

locale_dedir = $(libdir)/locales/de
locale_de_DATA = locales/de-DE/function.json

locale_de_dedir = $(libdir)/locales/de-DE
locale_de_de_DATA = locales/de-DE/function.json