AUTOMAKE_OPTIONS = subdir-objects

libdir = $(localstatedir)/lib/homegear/node-blue/nodes/gpio

gpiodir = $(libdir)
gpio_DATA = gpio-in/gpio-in.hni gpio-in/gpio-in.s.php gpio-out/gpio-out.hni gpio-out/gpio-out.s.php

locale_de_dedir = $(libdir)/locales/de-DE
locale_de_de_DATA = gpio-in/locales/de-DE/gpio-in gpio-out/locales/de-DE/gpio-out

