AUTOMAKE_OPTIONS = subdir-objects

libdir = $(localstatedir)/lib/homegear/node-blue/nodes/gpio

gpiodir = $(libdir)
gpio_DATA = package.json gpio-in/gpio-in.hni gpio-in/gpio-in.s.php gpio-out/gpio-out.hni gpio-out/gpio-out.s.php
locale_en_usdir = $(libdir)/locales/en-US
locale_en_us_DATA = locales/en-US/gpio.json
locale_de_dedir = $(libdir)/locales/de-DE
locale_de_de_DATA = locales/de-DE/gpio.json

