AUTOMAKE_OPTIONS = subdir-objects

libdir = $(localstatedir)/lib/homegear/node-blue/nodes/node-red-nodes/javascript
javascriptdir = $(libdir)
javascript_DATA = package.json javascript.html javascript.js

locale_endir = $(libdir)/locales/en
locale_en_DATA = locales/en-US/javascript.json locales/en-US/javascript.help.html

locale_en_usdir = $(libdir)/locales/en-US
locale_en_us_DATA = locales/en-US/javascript.json locales/en-US/javascript.help.html

locale_dedir = $(libdir)/locales/de
locale_de_DATA = locales/de-DE/javascript.json locales/de-DE/javascript.help.html

locale_de_dedir = $(libdir)/locales/de-DE
locale_de_de_DATA = locales/de-DE/javascript.json locales/de-DE/javascript.help.html
